--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^6.0.9",
     "@angular/cdk": "^6.4.0",
     "@angular/common": "^6.0.2",
@@ -19,7 +20,7 @@
     "@angular/flex-layout": "^6.0.0-beta.17",
     "@angular/forms": "^6.0.2",
     "@angular/http": "^6.0.2",
-    "@angular/material": "^6.4.0",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
